umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_azetin3ol.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C3H5NO
      atom_count: 10
      bond_count: 10
      property_count: 23
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C3H5NO
      atom_count: 10
      bond_count: 10
      property_count: 23
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C3H5NO
      atom_count: 10
      bond_count: 10
      extended_atoms: 0
      extended_bonds: 0
      property_count: 23
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C3H5NO
      atom_count: 10
      bond_count: 10
      extended_atoms: 0
      extended_bonds: 0
      property_count: 23
      rgroup_count: 0
      sgroup_count: 0
